# frame_factory

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  main.cpp  simple.hlsl  workspace.code-workspace
assets/shaders/: mvp.hlsl
clanggen/: Cargo.toml  template.rs
clanggen/src/: args.rs  c_macro.rs  cx_source_location.rs  generator.rs  lib.rs  lua_generator.rs  main.rs  namespace.rs  translation_unit.rs  type_function.rs
com_ptr_util/: Cargo.toml
com_ptr_util/src/: lib.rs
cpp/: .gitignore  CMakeLists.txt  cpp_sample.json  main.cpp
cpp/imgui/: CMakeLists.txt
cpp/libs/: CMakeLists.txt
cpp/libs/SDL2/: CMakeLists.txt  SDL_config.h
cpp/libs/imgui/: CMakeLists.txt
cpp/libs/imgui_static/: CMakeLists.txt
cpp/src/: CMakeLists.txt  dx11.cpp  dx11.h  extern_renderer.h  imgui_app.cpp  imgui_app.h  main.cpp  window_util.cpp  window_util.h
frame_factory/: Cargo.toml
frame_factory/src/: gui.rs  lib.rs  main.rs  scene_view.rs
from_cpp_header/: Cargo.toml
from_cpp_header/src/: c_macro.rs  cx_string.rs  cx_token.rs  define.rs  generator.rs  lib.rs  namespace.rs  type_function.rs  type_map.rs  type_struct.rs  type_typedef.rs  types.rs  visitor.rs
from_jsonschema/src/: generator.rs  parser.rs
gltf2/src/: lib.rs
imgui_raw/: build.rs
imgui_raw/src/: lib.rs
renderer/: Cargo.toml  build.rs
renderer/src/: asset_manager.rs  com_util.rs  error.rs  lib.rs  main.rs  renderer.rs  shader.rs  vertex_buffer.rs
renderer/src/resource/: buffer_array.rs  constant_buffer.rs  d3d_device.rs  material.rs  mod.rs  render_target.rs  shader.rs
rust/: Cargo.toml
rust/frame_factory/: Cargo.toml
rust/frame_factory/src/: lib.rs  main.rs
rust/from_cpp_header/: Cargo.toml
rust/from_cpp_header/src/: args.rs  cx_source_location.rs  cx_string.rs  cx_token.rs  cxsourcelocation.rs  cxstring.rs  function.rs  generator.rs  lib.rs  main.rs  namespace.rs  no_drop.rs  translation_unit.rs  type_enum.rs  type_function.rs  type_map.rs  type_struct.rs  type_typedef.rs  typedef.rs  types.rs  visitor.rs
rust/from_jsonschema/: Cargo.toml
rust/from_jsonschema/src/: baseiterator.rs  generator.rs  jsonschema.rs  main.rs  parser.rs
rust/gltf/: Cargo.toml
rust/gltf/src/: generated.rs  lib.rs
rust/gltf2/: Cargo.toml
rust/gltf2/src/: lib.rs
rust/imgui_raw/: Cargo.toml  build.rs
rust/imgui_raw/src/: lib.rs
rust/imgui_raw/src/sdl/: mod.rs
rust/imgui_shared/: Cargo.toml
rust/renderer/: Cargo.toml
rust/renderer/src/: asset_manager.rs  com_util.rs  error.rs  lib.rs  render_target.rs  renderer.rs  rendertarget.rs  scene.rs  shader.rs  vertex_buffer.rs
rust/renderer/src/resource/: buffer_array.rs  constant_buffer.rs  material.rs  mod.rs  render_target.rs  shader.rs  vertex_buffer.rs
rust/renderer/src/scene/: accessor_bytes.rs  camera.rs  loader.rs  material.rs  mod.rs  model.rs  scene_manager.rs  screen_state.rs  screenstate.rs
rust/sample/src/: main.rs
rust/scene/: Cargo.toml
rust/scene/src/: accessor_bytes.rs  camera.rs  error.rs  frame.rs  lib.rs  light.rs  loader.rs  material.rs  mesh.rs  node.rs  scene_manager.rs  texture.rs
sample/: Cargo.toml
sample/src/: main.rs  window.rs
scene/: Cargo.toml
scene/src/: camera.rs  error.rs  image.rs  lib.rs  material.rs  mesh.rs  message.rs  screen_state.rs  texture.rs
shaders/: mvp.hlsl
src/: main.rs
