[package]
name = "frame_factory"
version = "0.1.0"
authors = ["ousttrue <ousttrue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.2.0"
kernel32-sys = "0.2.0"
user32-sys = "0.2.0"
com-rs = "0.2.0"
directx-sys = { version = "0.1.0", features = ["d3d11", "d2d", "dwrite", "dxgi"] }
