PROJECT(cpp_sample)
CMAKE_MINIMUM_REQUIRED(VERSION 3.13.0)
set(CMAKE_CXX_STANDARD 20)

ADD_EXECUTABLE(${PROJECT_NAME}
    main.cpp
)

TARGET_LINK_DIRECTORIES(${PROJECT_NAME} PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/../rust/target/debug
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE
    renderer
    )
