[package]
name = "frame_factory"
version = "0.1.0"
authors = ["ousttrue <ousttrue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.winapi]
version = "0.3"
features = [
    "impl-default",
    "winuser",
    "libloaderapi",
    "dxgi",
    "d3d11",
    "d3dcompiler",
    "d3d11sdklayers",
]

[dependencies.gen]
path = "../gen"
