[package]
name = "frame_factory"
version = "0.1.0"
authors = ["ousttrue <ousttrue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
scene = { path = "../scene" }
renderer = { path = "../renderer" }
winapi = { version = "0.3", features = [
    "d3d11",
] }
