[package]
name = "frame_factory"
version = "0.1.0"
authors = ["ousttrue <ousttrue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.winapi]
version = "0.3"
features = [
    "impl-default",
    "winuser",
    "libloaderapi",
    "dxgi",
    "d3d11",
    "d3dcompiler",
    "d3d11sdklayers",
]

[dependencies.sdl2]
version = "0.34"
default-features = false
features = [
    "ttf",
    "image",
    "gfx",
    "mixer",
    "static-link",
    "use-vcpkg",
    "raw-window-handle",
]

[package.metadata.vcpkg]
dependencies = [
    "sdl2",
    "sdl2-image[libjpeg-turbo,tiff,libwebp]",
    "sdl2-ttf",
    "sdl2-gfx",
    "sdl2-mixer",
]
git = "https://github.com/microsoft/vcpkg"
rev = "a0518036077baa4"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[dependencies.imgui_raw]
path = "../imgui_raw"
