[package]
name = "imgui_raw"
version = "0.1.0"
authors = ["ousttrue <ousttrue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
va_list = "0.1.3"
